[package]
name = "ivynet-notifications"
version.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
alerts.workspace = true

async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
sendgrid = "0.23.0"
serde = { workspace = true, features = ["derive"] }
teloxide = { version = "0.13", features = ["macros"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
teloxide_tests = "0.2.0"
tokio.workspace = true
serde_json.workspace = true

[lints]
workspace = true
