[package]
name = "ivynet-signer"
version = "0.6.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "Signer library for IvyNet"
repository = "https://github.com/ivy-net/ivynet"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ivynet-io.workspace = true
ivynet-grpc.workspace = true
async-trait.workspace = true
blsful.workspace = true
dialoguer.workspace = true
dirs.workspace = true
dotenvy.workspace = true
ethers.workspace = true
eth-keystore.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
