[package]
name = "scraper"
version.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0.133"
thiserror = "2.0"
tokio = { version = "1.42.0", features = ["macros", "net"] }
tracing = { version = "0.1", features = ["log"] }
ivynet-core = { path = "../core" }
futures = "0.3.31"
ethers = { version = "2.0.14", features = ["ws", "abigen"] }
tracing-subscriber = "0.3.19"

[lints]
workspace = true
