[package]
name = "scraper"
version = "0.5.0"
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ivynet-grpc.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ivynet-error.workspace = true
futures.workspace = true
ethers.workspace = true
tracing-subscriber.workspace = true
ivynet-node-type.workspace = true


[lints]
workspace = true
